--- a/recruit/src/main/webapp/resources/css/common.css
+++ b/recruit/src/main/webapp/resources/css/common.css
@@ -111,5 +111,10 @@ h3.itemTit{
     top: 2px;
 }
 .clearfix:after{ content: ' '; display: block; clear: both; visibility: hidden; line-height: 0; height: 0 }
-
+/*添加模块add-form*/
+.fixedBtnBanner{
+    position: fixed;
+    bottom: 10px;
+    right: 50px;
+}
 
